# sora

./: .gitignore  .justfile  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
sora/: __main__.py  anime.py  cli.py  downloaders.py  exceptions.py  utils.py
sora/sources/: __init__.py  base.py  witanime.py
src/: anime.py  cli.py  downloaders.py
