[project]
name = "sora"
version = "0.1.0"
description = "A small tool to bulk download anime episods from witanime in arabic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.1",
    "fast-header>=0.1.3",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "typer>=0.15.1",
]

[project.scripts]
sora = "cli:app"
